--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 Flask==3.0.2
 Werkzeug==3.0.1
 gunicorn==21.2.0
-SQLite3==3.35.0
-Flask-Session==0.5.0
-pytest==7.4.3
-pytest-cov==4.1.0
-coverage==7.3.2
 Flask-SQLAlchemy==3.1.1
+psycopg2-binary==2.9.9
+Flask-Migrate==4.0.5
+Flask-Caching==2.1.0
+Flask-JWT-Extended==4.6.0
+celery==5.3.6
+redis==5.0.1
+pytest==8.0.2
+pytest-cov==4.1.0
+python-dotenv==1.0.1
