--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,21 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+    
     steps:
     - uses: actions/checkout@v2
     
@@ -36,10 +22,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e .
         
     - name: Run tests
       run: |
-        pytest --cov=app tests/
+        python -m pytest --cov=app tests/
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
