--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ psycopg2-binary==2.9.9
 Flask-Migrate==4.0.5
 Flask-Caching==2.1.0
 Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
 celery==5.3.6
 redis==5.0.1
 pytest==8.0.2
