--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,7 @@ jobs:
       run: |
         python -m pytest --cov=app tests/ --cov-report=xml
     
-    - name: Upload coverage to Codecov
+    - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
-        fail_ci_if_error: true 
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
