--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,36 @@
 version: '3.8'
 
 services:
-  # Основное веб-приложение
   web:
     build: .
+    restart: always
     ports:
-      - "5000:5000"
-    env_file: .env
+      - "8000:8000"
+    environment:
+      - FLASK_APP=app
+      - FLASK_ENV=production
+      - DATABASE_URL=postgresql://user:password@db:5432/dbname
+      - SECRET_KEY=${SECRET_KEY}
     depends_on:
       - db
       - redis
-      - celery
-    volumes:
-      - .:/app
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
-  # База данных PostgreSQL
   db:
-    image: postgres:13-alpine
+    image: postgres:13
+    restart: always
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=dbname
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
 
-  # Redis для кэширования и очередей
   redis:
-    image: redis:6-alpine
+    image: redis:6
+    restart: always
     volumes:
       - redis_data:/data
 
-  # Celery для асинхронных задач
-  celery:
-    build: .
-    command: celery -A app.celery worker --loglevel=info
-    env_file: .env
-    depends_on:
-      - redis
-
-  # Nginx как обратный прокси
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - web
-
-# Постоянные тома для данных
 volumes:
   postgres_data:
   redis_data: 
