--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-Flask==3.0.2
-Werkzeug==3.0.1
-gunicorn==21.2.0
-Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.9
-Flask-Migrate==4.0.5
-Flask-Caching==2.1.0
-Flask-JWT-Extended==4.6.0
-Flask-Login==0.6.3
-celery==5.3.6
-redis==5.0.1
-pytest==8.0.2
-pytest-cov==4.1.0
-python-dotenv==1.0.1
+flask
+flask-sqlalchemy
+flask-login
+flask-migrate
+flask-caching
+psycopg2-binary
+redis
+gunicorn
+pytest
+pytest-cov
+python-dotenv
