--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-flask
-flask-sqlalchemy
-flask-login
-flask-migrate
-flask-caching
-psycopg2-binary
-redis
-gunicorn
-pytest
-pytest-cov
-python-dotenv
+flask==3.0.2
+flask-sqlalchemy==3.1.1
+flask-login==0.6.3
+flask-migrate==4.0.5
+flask-caching==2.1.0
+psycopg2-binary==2.9.9
+redis==5.0.1
+gunicorn==21.2.0
+pytest==8.0.2
+pytest-cov==4.1.0
+python-dotenv==1.0.1
